[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "diff_md"
version = "0.0.1"
authors = [{ name = "Manuel Carrer", email = "manuel.carrer@kjemi.uio.no" }]
description = "Differentiable MD"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
diff_md = "diff_md.main:main"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
